# helion-mlir

./: .gitignore  AGENTS.md  README.md  build.sh  project.plan.md  pyproject.toml  requirements.txt  test_torch_mlir_helper.py
custome_op/: __init__.py  broadcast.py
docs/: block_sizes_in_helion.md  example_device_ir_ops.md  software_architecture.md  torch-mlir-interface.md
examples/: attn.py  helion_matmul.py  matmul.py
examples/outputs/: attn.mlir  flash_attention.mlir  mamba_chunk_scan.mlir  matmul.mlir  matmul_split_k.mlir  matmul_split_k_barrier.mlir  matmul_split_k_gather.mlir  mqa_decode.mlir
examples/scripts/: attn.py  flash_attention.py  mamba_chunk_scan.py  matmul.py  matmul_split_k.py  matmul_split_k_barrier.py  matmul_split_k_gather.py  mqa_decode.py
json2mlir/: CMakeLists.txt  README.md
json2mlir/include/helion_mlir/: Builder.h  JsonLoader.h
json2mlir/tests/FileCheck/: matmul_tiled.json  matmul_tiled.mlir.expected
mlir/include/helion/IR/: HelionOps.td
mlir/lib/IR/: HelionDialect.cpp  HelionOps.cpp
src/helion_fx_mlir/: __init__.py  helion_mlir.py  ir_visitor.py  lowering_context.py  mlir_builder.py  torch_mlir_helper.py
src/helion_fx_mlir/lowerings/: aten_ops.py  tracing_ops.py
src/helion_mlir/: __init__.py  analysis.py  debug_utils.py  emitter.py  helion_mlir.py  ir_visitor.py  lowering_context.py  mlir_builder.py  models.py  registry.py  torch_mlir_helper.py
src/helion_mlir/torch_mlir/: rewrites.py
tests/: test_subview_constraints.py
