[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helion-mlir"
version = "0.1.0"
description = "Helion-to-MLIR lowering utilities"
requires-python = ">=3.10"
dependencies = [
    "triton",
    "helion",
    "tabulate",
    "torch-mlir",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
